# xss-real

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  auto-format.sh
include/algorithms/: duval.hpp  nss_isa.hpp  nss_real.hpp  pss_isa.hpp  psv_simple.hpp  xss_array.hpp  xss_bps.hpp  xss_bps_lcp.hpp  xss_herlez.hpp  xss_isa_psv.hpp  xss_prezza.hpp  xss_real.hpp  xss_real_ctx.hpp  xss_simple_ctx.hpp
include/data_structures/bit_vectors/: bit_vector.hpp
include/data_structures/bit_vectors/support/: bps_support_naive.hpp  bps_support_sdsl.hpp  left_zeros.hpp
include/data_structures/ctz/: ctz.hpp  ctz_lookup.hpp  ctz_plain.hpp  ctz_strategy.hpp
include/data_structures/lce/: lce_herlez.hpp  lce_herlez1k.hpp  lce_naive.hpp  lce_prezza.hpp  lce_prezza1k.hpp  lce_rk.hpp  lce_rk1k.hpp  lce_stats.hpp
include/data_structures/lce/rk/: rk_lce.hpp  rk_lce_bin.hpp
include/data_structures/stacks/: stack_strategy.hpp
include/data_structures/stacks/bool_stack/: bool_stack.hpp  bool_stack_dynamic.hpp  bool_stack_static.hpp
include/data_structures/stacks/buffer_stack/: buffer_stack.hpp
include/data_structures/stacks/lcp_stack/: lcp_stack.hpp  lcp_stack_buffered.hpp  lcp_stack_delta.hpp  lcp_stack_delta_0.hpp  lcp_stack_delta_x.hpp  lcp_stack_naive.hpp
include/data_structures/stacks/naive_stack/: naive_stack.hpp
include/data_structures/stacks/telescope_stack/: telescope_stack.hpp  telescope_stack_buffered.hpp  telescope_stack_dynamic.hpp  telescope_stack_static.hpp
include/data_structures/stacks/unary_stack/: unary_stack.hpp  unary_stack_dynamic.hpp  unary_stack_static.hpp
include/executable/: bench.hpp  gen.hpp
include/executable/benchmark/algorithms/: algo_bench.hpp
include/executable/benchmark/ctz/: ctz_bench.hpp
include/executable/benchmark/stacks/: stack_bench.hpp
include/executable/generator/: alphabet.hpp  gen_fibonacci.hpp  gen_max_overlap.hpp  gen_pizzachili.hpp  gen_random.hpp  gen_run.hpp  gen_run_of_runs.hpp  gen_stack_bench.hpp
include/executable/generator/pizzachili/: data.hpp  download.hpp  extract.hpp  prefixes.hpp
include/util/: bit_reversal.hpp  common.hpp  enums.hpp  file_util.hpp  integer_types.hpp  logging.hpp  random.hpp  time_measure.hpp  units.hpp
src/: CMakeLists.txt  bench.cpp  gen.cpp
test/: CMakeLists.txt  test_xss.cpp  test_xss_array.cpp  test_xss_lookahead.cpp  test_xss_random.cpp  xss_ltr_succinct_test.cpp  xss_ltr_succinct_test_all.cpp  xss_ltr_succinct_test_infinite.cpp  xss_ltr_succinct_test_memory.cpp  xss_ltr_succinct_test_only_lookahed.cpp  xss_ltr_succinct_test_pizzachili.cpp  xss_ltr_succinct_test_random.cpp
test/.deprecated/: ctz_lookup_test.cpp  stack_test.cpp  xss_ltr_succinct_test_all.cpp  xss_ltr_succinct_test_infinite.cpp  xss_ltr_succinct_test_memory.cpp  xss_ltr_succinct_test_pizzachili.cpp
test/runner/: check_xss.hpp  check_xss_array.hpp
test/util/: test_check.hpp  test_check_array.hpp  test_files.hpp  test_gen.hpp  test_lookahead.hpp  test_manual.hpp  test_random.hpp
